dark mode fix button

--- a/src/index.css
+++ b/src/index.css
@@ -25,12 +25,12 @@
 
 /* Save button  */
 .positiveButton {
-  @apply bg-aqua font-bold dark:bg-darkSave text-mobileButton md:text-desktopMain text-mainBlue dark:text-darkBg border-none rounded-md font-lato shadow-esm p-1 px-3 mx-2 w-20 h-8;
+  @apply bg-mainBlue font-bold dark:bg-darkSave hover:bg-white hover:border-2 hover:border-blue hover:text-mainBlue text-mobileButton md:text-desktopMain text-white dark:text-darkBg  rounded-md font-lato shadow-esm p-1 px-3 mx-2 w-20 h-8 duration-300 ease-in-out;
 }
 
 /* Cancel button */
 .negativeButton {
-  @apply bg-coral dark:bg-darkCancel font-bold text-mobileButton md:text-desktopMain text-mainBlue dark:text-darkBg border-none rounded-md font-lato shadow-esm p-1 px-3 mx-2 w-20 h-8;
+  @apply bg-coral dark:bg-darkCancel hover:bg-white hover:border-2 hover:border-coral hover:text-coral font-bold text-mobileButton md:text-desktopMain text-white dark:text-darkBg rounded-md font-lato shadow-esm p-1 px-3 mx-2 w-20 h-8 duration-300 ease-in-out;
 }
 
 .startTodayButton {
@@ -39,11 +39,11 @@
 
 /* Inside the table: edit button */
 .tablePositiveButton {
-  @apply bg-transparent font-bold font-lato text-mobileSidebar text-mainBlue dark:text-blue dark:hover:bg-blue dark:hover:text-darkContHero rounded-md border-none px-6 py-2 duration-300 ease-in-out;
+  @apply bg-transparent font-bold font-lato text-mobileButton text-mainBlue  hover:bg-mainBlue hover:text-white dark:text-blue dark:hover:bg-blue dark:hover:text-darkContHero rounded-md border-none px-4 w-20 py-2 duration-300 ease-in-out;
 }
 /* Inside the table: Delete button */
 .tableNegativeButton {
-  @apply bg-transparent font-bold font-lato text-mobileSidebar text-coral dark:text-darkCancel dark:hover:bg-darkCancel dark:hover:text-darkContHero rounded-md border-none px-4 py-2 duration-300 ease-in-out;
+  @apply bg-transparent font-bold font-lato text-mobileButton text-coral hover:bg-coral hover:text-white dark:text-darkCancel dark:hover:bg-darkCancel dark:hover:text-darkContHero rounded-md border-none px-4 w-20 py-2 duration-300 ease-in-out;
 }
 
 /* ----------- End of Buttons ------------- */
